@@ -7,7 +7,6 @@ import fr.psalles.kmdeckbuilder.models.HighlightDto;
 import fr.psalles.kmdeckbuilder.models.SimpleTagDto;
 import fr.psalles.kmdeckbuilder.models.entities.*;
 import fr.psalles.kmdeckbuilder.models.entities.embedded.*;
-import fr.psalles.kmdeckbuilder.models.entities.projections.FavoriteCount;
 import fr.psalles.kmdeckbuilder.models.entities.projections.UserCount;
 import fr.psalles.kmdeckbuilder.models.enums.Language;
 import fr.psalles.kmdeckbuilder.models.requests.DeckCreateForm;
@@ -21,6 +20,7 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Sort;
 import org.springframework.scheduling.annotation.Scheduled;
+import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 
@@ -30,7 +30,6 @@ import java.util.function.Function;
 import java.util.stream.Collectors;
 
 import static fr.psalles.kmdeckbuilder.models.entities.specification.DeckSpecification.*;
-import static java.util.stream.Collectors.toList;
 
 
 @Slf4j
@@ -112,6 +111,7 @@ public class DeckService {
         entity.setCostAP(deck.getCards().stream().map(a -> a.getCostAP() * a.getCount()).reduce(0, Integer::sum));
         entity.setCostDust(deck.getCards().stream().map(a -> a.getRarity().getDust() * a.getCount()).reduce(0, Integer::sum));
         entity.setUserId(user);
+        entity.setVideoLink(deck.getVideoLink());
         entity.setDescription(deck.getDescription());
 
         List<CardAssociation> associations = deck.getCards().stream().map(card -> {
@@ -193,8 +193,10 @@ public class DeckService {
         return SavedDeckResponse.builder().deckId(identity.getDeckId()).version(identity.getVersion()).build();
     }
 
-    public Page<DeckDto> findDecks(DeckSearchForm form, boolean authenticated) {
+    public Page<DeckDto> findDecks(DeckSearchForm form) {
         String userId = SecurityContextHolder.getContext().getAuthentication().getName();
+        boolean authenticated = SecurityContextHolder.getContext().getAuthentication().getAuthorities()
+                .stream().map(GrantedAuthority::getAuthority).noneMatch(a -> a.equals("ROLE_ANONYMOUS"));
         Page<DeckEntity> page = deckRepository.findAll(
                 filterByGod(form.getGods())
                         .and(filterLastVersion())
@@ -236,7 +238,7 @@ public class DeckService {
                     .highlights(entity.getHighlights().stream()
                             .sorted(Comparator.comparingInt(DeckHighlight::getHighlightOrder))
                             .map(a -> HighlightDto.builder().highlightOrder(a.getHighlightOrder()).cardId(a.getId().getCardId()).build())
-                            .collect(toList()))
+                            .toList())
                     .costDust(entity.getCostDust())
                     .build();
         });
@@ -274,7 +276,7 @@ public class DeckService {
                     .highlights(entity.getHighlights().stream()
                             .sorted(Comparator.comparingInt(DeckHighlight::getHighlightOrder))
                             .map(a -> HighlightDto.builder().highlightOrder(a.getHighlightOrder()).cardId(a.getId().getCardId()).build())
-                            .collect(toList()))
+                            .toList())
                     .costDust(entity.getCostDust())
                     .build();
         });
@@ -333,11 +335,12 @@ public class DeckService {
                 .version(deckEntity.getId().getVersion())
                 .liked(userFavs.contains(deckEntity.getId().getDeckId()))
                 .versions(versions)
+                .videoLink(deckEntity.getVideoLink())
                 .favoriteCount(deckEntity.getFavoriteCount())
                 .highlights(deckEntity.getHighlights().stream()
                         .sorted(Comparator.comparingInt(DeckHighlight::getHighlightOrder))
                         .map(a -> HighlightDto.builder().highlightOrder(a.getHighlightOrder()).cardId(a.getId().getCardId()).build())
-                        .collect(toList()))
+                        .toList())
                 .costDust(deckEntity.getCostDust())
                 .cards(cardDtos).build();
     }
